# Laplace

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json
app/: package-lock.json  package.json  tsconfig.base.json  turbo.json
app/apps/indexer-worker/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
app/apps/indexer-worker/migrations/: 0001_init.sql
app/apps/indexer-worker/src/: db.ts  index.ts  schema.ts
app/apps/main/: .env.example  .env.production  .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/apps/main/src/: App.test.tsx  App.tsx  env.ts  main.tsx  router.tsx
app/apps/main/src/components/: BrandMark.tsx  ErrorBoundary.tsx  Footer.module.css  Footer.tsx  Nav.module.css  Nav.tsx
app/apps/main/src/components/diagrams/: ArchitectureDiagram.tsx  LifecycleDiagram.tsx  StateMachineDiagram.tsx  arch.css  diagram.css
app/apps/main/src/content/: site.ts  snippets.ts
app/apps/main/src/indexer/: IndexerBadge.module.css  IndexerBadge.tsx  IndexerProvider.tsx  hooks.test.tsx  hooks.ts  indexerClient.test.ts  indexerClient.ts  useIndexerStatus.ts
app/apps/main/src/intent/: adapters.test.ts  adapters.ts  criterionLabel.test.ts  criterionLabel.ts  mintInfo.ts
app/apps/main/src/layouts/: ConsoleLayout.module.css  ConsoleLayout.tsx  SiteLayout.module.css  SiteLayout.test.tsx  SiteLayout.tsx
app/apps/main/src/marketing/: Cta.module.css  Cta.tsx  Eyebrow.module.css  Eyebrow.tsx  PageHead.module.css  PageHead.tsx  SecHead.module.css  SecHead.tsx
app/apps/main/src/providers/: AppProviders.tsx
app/apps/main/src/routes/: Docs.module.css  Docs.test.tsx  Docs.tsx  Lab.module.css  Lab.test.tsx  Lab.tsx  Landing.module.css  Landing.test.tsx  Landing.tsx  NotFound.tsx  Registry.module.css  Registry.test.tsx  Registry.tsx  useScrollSpy.ts
app/apps/main/src/wallet/: ClusterWarning.module.css  ClusterWarning.tsx  ConnectModal.module.css  ConnectModal.tsx  ConnectedSigner.tsx  WalletButton.module.css  WalletButton.tsx  WalletProvider.test.tsx  WalletProvider.tsx  cluster.ts  useWalletBalance.ts
app/scripts/: devnet-lifecycle.mjs
docs/: README.md  conditional-escrow.md  criteria-registry.md  deployment.md  frontend-architecture.md  main-site-spec.md  product-vision.md  use-cases.md
docs/design-reference/laplace-prototype/: README.md
docs/design-reference/laplace-prototype/chats/: chat1.md  chat2.md
docs/design-reference/laplace-prototype/project/: Laplace Site Overview.html  app.js  docs.html  index.html  lab.html  registry.html  registry.js
docs/design-reference/laplace-prototype/project/styles/: anyui-tokens.css  app.css  bg.js  laplace.css  laplace.js
docs/superpowers/plans/: 2026-06-02-laplace-lifecycle-events.md  2026-06-03-laplace-indexer.md  2026-06-03-laplace-website-01-foundation.md  2026-06-03-laplace-website-02-integration.md  2026-06-03-laplace-website-03-marketing.md  2026-06-03-laplace-website-04-console.md
docs/superpowers/specs/: 2026-06-02-laplace-lifecycle-events-design.md  2026-06-02-universal-intent-binding-design.md  2026-06-03-laplace-indexer-design.md  2026-06-03-laplace-website-design.md
guests/encrypted-disclosure/: Cargo.toml
guests/encrypted-disclosure/src/: lib.rs  main.rs
programs/hashlock/: Cargo.toml
programs/hashlock/src/: constants.rs  error.rs  lib.rs  verify_criterion.rs
programs/hashlock/tests/: test_hashlock.rs  test_laplace_e2e.rs
programs/laplace/: Cargo.toml
programs/laplace/src/: binding.rs  constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/laplace/src/instructions/: close_intent.rs  create_intent.rs  fulfill_with_criterion.rs  refund_expired_intent.rs
programs/laplace/tests/: test_criterion_interface.rs  test_initialize.rs
programs/validity/: Cargo.toml
programs/validity/src/: constants.rs  create_validity.rs  error.rs  events.rs  lib.rs  state.rs  verify_criterion.rs
programs/validity/tests/: test_laplace_e2e.rs  test_validity.rs
programs/validity/tests/fixtures/: fibonacci_groth16_proof.hex  fibonacci_public_values.hex
scripts/: deploy.sh  set-upgrade-authority.sh  verify-deploy.sh
tools/encrypted-disclosure-fixture/: Cargo.toml  build.rs
tools/encrypted-disclosure-fixture/src/: main.rs
(+21 files in other folders)
