[package]
name = "hashlock"
version = "0.1.0"
description = "Official hashlock criterion adapter for Laplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hashlock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.2"
laplace = { path = "../laplace", features = ["no-entrypoint"] }
solana-sha256-hasher = { version = "3.1.0", features = ["sha2"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-program-pack = "3.0.0"
solana-rent = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-transaction = "3.0.2"
spl-token-interface = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
