[package]
name = "encrypted-disclosure-fixture"
version = "0.1.0"
description = "Generates SP1 Groth16 fixtures for the encrypted-disclosure validity profile"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
encrypted-disclosure = { path = "../../guests/encrypted-disclosure" }
hex = "0.4.3"
laplace = { path = "../../programs/laplace", features = ["no-entrypoint"] }
sha2 = "0.10.9"
sp1-prover = "6.2.2"
sp1-sdk = { version = "6.2.2", features = ["blocking"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
validity = { path = "../../programs/validity", features = ["no-entrypoint"] }

[build-dependencies]
sp1-build = "6.2.2"
